SONAR-17706 Remove root_uuid in Components and all its uses